kodex-rs/tui/src/bottom_pane/snapshots/kodex_tui__bottom_pane__tests__backend_banner_workspace_member_credits.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
                                            
  Usage limit reached                       
  Your included usage is depleted.          
  Choose an action to continue.             
                                            
› 1. Open usage settings                    
  2. Notify owner                           
  3. Extra action                           
                                            
  Press a number to choose · esc to dismiss 
  · type to continue                        
                                            
› Ask Kodex to do anything                  
                                            
  ? for shortcuts        100% context left
