kodex-rs/tui/src/bottom_pane/snapshots/kodex_tui__bottom_pane__tests__status_hidden_when_height_too_small_height_1.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area1)"
---
› Ask Kodex to do a
