kodex-rs/tui/src/bottom_pane/snapshots/kodex_tui__bottom_pane__tests__status_only_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)               
                                                
                                                
› Ask Kodex to do anything                      
                                                
  ? for shortcuts            100% context left
